Refactor: data endpoints to person endpoints
